# zephyr-template

./: .gitignore  .gitmodules  Makefile  README.md
.west/: config
env/: docker.mk
firmware/: CMakeLists.txt  Kconfig  prj.conf  west.yml
firmware/drivers/sensor/: CMakeLists.txt  Kconfig
firmware/drivers/sensor/soil_moisture/: CMakeLists.txt  Kconfig  soil_moisture.c
firmware/dts/bindings/bindings/: soil,soil_moisture.yaml
firmware/lib/protos/: CMakeLists.txt  messages.proto
firmware/src/: wifi_test.cpp
